<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/alarma_layout">
    <RelativeLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fragment_background"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Alarm">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/titleSeleccionaAlarma"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:ems="10"
                android:hint="@string/inputSeleccionaAlarma"
                android:id="@+id/txtAlarm"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Alarm"
            android:id="@+id/Distancia">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/titleSeleccionaDistancia"/>
            <SeekBar
                android:id="@+id/sbDistancia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:progress="30"
                android:max="30"/>
            <EditText
                android:id="@+id/etResultDistancia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:inputType="number"
                android:gravity="center_horizontal"
                android:maxLength="2"/>
            <TextView
                android:id="@+id/tvKM"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="km"
                />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:src="@drawable/alarm_button"
            android:id="@+id/btnAlarm"
            android:paddingBottom="20dp"
            android:paddingRight="15dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />
        </RelativeLayout>

</LinearLayout>